--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "typescript": "^4.0.0",
     "vite": "^2.2.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "dotenv": "^9.0.0",
+    "mongoose": "^5.12.7"
+  }
 }
